--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Clean requirements for PythonAnywhere deployment (no Heroku dependencies)
+# Clean requirements for deployment (no Heroku dependencies)
 
 # Core Django
 Django==5.1.6
@@ -6,7 +6,8 @@ asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.1
 
-# Database
+# Database (PostgreSQL on Railway/Heroku)
+dj-database-url==3.1.0
 psycopg2-binary==2.9.10
 
 # Web server
