--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: gunicorn --config gunicorn.conf.py stationery_tracker.wsgi:application
+    command: python run_gunicorn.py
     restart: unless-stopped
