--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "DOCKERFILE"
 
 [deploy]
-startCommand = "bash start_railway.sh"
+startCommand = "python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:$PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
