Remove Dockerfile and use NIXPACKS with Django runserver fix

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "DOCKERFILE"
+builder = "NIXPACKS"
 
 [deploy]
 startCommand = "python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:$PORT"
