--- a/railway.toml
+++ b/railway.toml
@@ -5,6 +5,9 @@ builder = "NIXPACKS"
 startCommand = "bash start.sh"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+healthcheckPath = "/admin"
+healthcheckTimeout = 100
+healthcheckInterval = 30
 
 [env]
 PYTHON_VERSION = "3.11"
