Add DATABASE_URL to railway.toml for PostgreSQL connection

--- a/railway.toml
+++ b/railway.toml
@@ -8,3 +8,4 @@ restartPolicyMaxRetries = 10
 
 [env]
 PYTHON_VERSION = "3.11"
+DATABASE_URL = "postgresql://postgres:railway@localhost:5432/railway"
