dganjo version update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Clean requirements for deployment (no Heroku dependencies)
 
 # Core Django
-Django==5.1.6
+Django>=5.1.6
 asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.1
