--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DEBUG=False
 # DATABASE_URL=postgresql://username:password@host:port/database_name
 
 # Railway Specific
-RAILWAY_PUBLIC_DOMAIN=your-app-name.railway.app
+RAILWAY_PUBLIC_DOMAIN=yhttps://confident-truth-production.up.railway.app/
 PORT=8000
 
 # Email Configuration (Optional)
