--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Clean requirements for deployment (no Heroku dependencies)
 
 # Core Django
-Django>=5.1.6
+Django==5.1.6
 asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.1
 
-# Database (PostgreSQL on Railway/Heroku)
+# Database (PostgreSQL on Railway)
 dj-database-url==3.1.0
 psycopg2-binary==2.9.10
 
