--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
 # Django Settings
 SECRET_KEY=your-very-secret-key-here-change-this-in-production
-DJANGO_SETTINGS_MODULE=stationery_tracker.production_settings
 DEBUG=False
 
 # Database (Railway provides DATABASE_URL automatically)
 # DATABASE_URL=postgresql://username:password@host:port/database_name
 
 # Railway Specific
-RAILWAY_PUBLIC_DOMAIN=yhttps://confident-truth-production.up.railway.app/
 PORT=8000
+
+# Host Configuration
+ALLOWED_HOSTS=confident-truth-production.up.railway.app,localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=https://confident-truth-production.up.railway.app,http://confident-truth-production.up.railway.app
 
 # Email Configuration (Optional)
 EMAIL_HOST=smtp.gmail.com
